--- a/package.json
+++ b/package.json
@@ -17,9 +17,18 @@
   },
   "homepage": "https://github.com/lclaytont/linktank#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "latest",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
-    "passport-google-oauth20": "^1.0.0"
+    "express-mysql-session": "^1.2.1",
+    "express-session": "^1.15.4",
+    "mongoose": "~3.8.1",
+    "morgan": "~1.0.0",
+    "passport": "^0.3.2",
+    "passport-create": "0.0.1",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0"
   }
 }
