--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Social network connecting charitable organizations with potential volunteers",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "source .variables && nodemon"
   },
   "repository": {
     "type": "git",
