--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "~3.8.1",
     "morgan": "~1.0.0",
     "passport": "^0.3.2",
+    "sendgrid": "^5.1.2",
     "passport-create": "0.0.1",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0"
