--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "express-session": "^1.15.4",
     "mongoose": "~3.8.1",
     "morgan": "~1.0.0",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
-    "sendgrid": "^5.1.2",
     "passport-create": "0.0.1",
     "passport-google-oauth20": "^1.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sendgrid": "^5.1.2"
   }
 }
